--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,52 +1,68 @@
 name: Deploy to Cloud Run
 
-on:
-  push:
-    branches:
-      - main  # or change to your deploy branch
+on: [push]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      # ----- Backend tests -----
+      - name: Use Node 20
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 20
 
-      - name: Install dependencies and run tests
+      - name: Install & test backend
+        working-directory: backend
         run: |
-          cd frontend
-          npm ci
-          npm test
-          cd ../backend
           npm ci
           npm test
 
+      # ----- Frontend tests -----
+      - name: Install & test frontend
+        working-directory: frontend
+        run: |
+          npm ci
+          npm test
+
+      # ----- GCP auth (uses your JSON key secret) -----
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Set up Google Cloud SDK
+      - name: Setup gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
+      # ----- Deploy BACKEND -----
       - name: Deploy backend to Cloud Run
+        id: deploy-backend
         uses: google-github-actions/deploy-cloudrun@v2
         with:
           service: recipe-sharing-backend
           source: ./backend
           region: ${{ secrets.GCP_REGION }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          allow-unauthenticated: true
 
+      # ----- Deploy FRONTEND -----
       - name: Deploy frontend to Cloud Run
+        id: deploy-frontend
         uses: google-github-actions/deploy-cloudrun@v2
         with:
           service: recipe-sharing-frontend
           source: ./frontend
           region: ${{ secrets.GCP_REGION }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          allow-unauthenticated: true
+
+      - name: Print service URLs
+        run: |
+          echo "Backend URL:  ${{ steps.deploy-backend.outputs.url }}"
+          echo "Frontend URL: ${{ steps.deploy-frontend.outputs.url }}"
