CI/CD: fix Cloud Run flags and ensure frontend binds to PORT

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,68 +1,8 @@
-name: Deploy to Cloud Run
-
-on: [push]
-
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      # ----- Backend tests -----
-      - name: Use Node 20
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Install & test backend
-        working-directory: backend
-        run: |
-          npm ci
-          npm test
-
-      # ----- Frontend tests -----
-      - name: Install & test frontend
-        working-directory: frontend
-        run: |
-          npm ci
-          npm test
-
-      # ----- GCP auth (uses your JSON key secret) -----
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-
-      - name: Setup gcloud
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-
-      # ----- Deploy BACKEND -----
-      - name: Deploy backend to Cloud Run
-        id: deploy-backend
-        uses: google-github-actions/deploy-cloudrun@v2
-        with:
-          service: recipe-sharing-backend
-          source: ./backend
-          region: ${{ secrets.GCP_REGION }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          allow-unauthenticated: true
-
-      # ----- Deploy FRONTEND -----
-      - name: Deploy frontend to Cloud Run
-        id: deploy-frontend
-        uses: google-github-actions/deploy-cloudrun@v2
-        with:
-          service: recipe-sharing-frontend
-          source: ./frontend
-          region: ${{ secrets.GCP_REGION }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          allow-unauthenticated: true
-
-      - name: Print service URLs
-        run: |
-          echo "Backend URL:  ${{ steps.deploy-backend.outputs.url }}"
-          echo "Frontend URL: ${{ steps.deploy-frontend.outputs.url }}"
+- name: Deploy frontend to Cloud Run
+  uses: google-github-actions/deploy-cloudrun@v2
+  with:
+    service: recipe-sharing-frontend
+    source: ./frontend
+    project_id: ${{ secrets.GCP_PROJECT_ID }}
+    region: ${{ secrets.GCP_REGION }}
+    flags: '--allow-unauthenticated'
