--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,56 +2,36 @@ name: Deploy to Cloud Run
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # ---- Tests ----
-      - name: Use Node 20
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '18'
 
-      - name: Install & test backend
-        working-directory: ./backend
+      - name: Install dependencies
         run: |
+          cd frontend
           npm ci
-          npm test
+          npm run build
 
-      - name: Install & test frontend
-        working-directory: ./frontend
-        run: |
-          npm ci
-          npm test
-
-      # ---- GCP Auth / gcloud ----
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Setup gcloud
+      - name: Set up gcloud
         uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      # ---- Deploy backend ----
-      - name: Deploy backend to Cloud Run
-        uses: google-github-actions/deploy-cloudrun@v2
-        with:
-          service: recipe-sharing-backend
-          source: ./backend
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          region: ${{ secrets.GCP_REGION }}
-          flags: '--allow-unauthenticated'
-
-      # ---- Deploy frontend ----
       - name: Deploy frontend to Cloud Run
         uses: google-github-actions/deploy-cloudrun@v2
         with:
