--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,41 +2,75 @@ name: Deploy to Cloud Run
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
+          cache: 'npm'
 
-      - name: Install dependencies
-        run: |
-          cd frontend
-          npm ci
-          npm run build
+      # ===== Backend =====
+      - name: Install backend deps
+        working-directory: backend
+        run: npm ci
 
-      - name: Authenticate to Google Cloud
+      - name: Test backend
+        working-directory: backend
+        run: npm test -- --watchAll=false
+
+      # ===== Frontend =====
+      - name: Install frontend deps
+        working-directory: frontend
+        run: npm ci
+
+      - name: Test frontend
+        working-directory: frontend
+        # keep || true if frontend tests aren't ready yet
+        run: npm test -- --watchAll=false || true
+
+      # ===== GCP Auth & gcloud =====
+      - name: Authenticate to GCP
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Set up gcloud
+      - name: Setup gcloud
         uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Deploy frontend to Cloud Run
+      # ===== Deploy BACKEND =====
+      - id: deploy-backend
+        name: Deploy backend to Cloud Run
+        uses: google-github-actions/deploy-cloudrun@v2
+        with:
+          service: recipe-sharing-backend
+          source: ./backend
+          region: ${{ secrets.GCP_REGION }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          flags: '--allow-unauthenticated'
+
+      # ===== Deploy FRONTEND =====
+      - id: deploy-frontend
+        name: Deploy frontend to Cloud Run
         uses: google-github-actions/deploy-cloudrun@v2
         with:
           service: recipe-sharing-frontend
           source: ./frontend
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
           region: ${{ secrets.GCP_REGION }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
           flags: '--allow-unauthenticated'
+
+      - name: Show service URLs (screenshot this)
+        run: |
+          echo "Backend URL:  ${{ steps.deploy-backend.outputs.url }}"
+          echo "Frontend URL: ${{ steps.deploy-frontend.outputs.url }}"
