fix(frontend): restore valid JSON package.json; bind preview to PORT

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,21 @@
-const PORT = process.env.PORT || 8080;
-app.listen(PORT, '0.0.0.0', () => console.log(`Listening on ${PORT}`));
-
 {
-  "name": "recipe-backend",
+  "name": "frontend",
   "version": "1.0.0",
-  "main": "server.js",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "test": "jest"
+    "dev": "vite",
+    "build": "vite build",
+    "start": "vite preview --host 0.0.0.0 --port ${PORT:-8080}",
+    "test": "vitest run"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "cors": "^2.8.5"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.6.0"
   }
 }
