--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,7 +57,8 @@ jobs:
         if: ${{ env.SKIP_BUILD_DEPLOY != 'true' }}
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: ${{ secrets.GCP_PROJECT_
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+
       # ===== Deploy Backend =====
       - name: Deploy backend to Cloud Run
         if: ${{ env.SKIP_BUILD_DEPLOY != 'true' }}
