--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "frontend",
-  "version": "1.0.0",
-  "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "start": "vite preview --host 0.0.0.0 --port ${PORT:-8080}",
     "test": "vitest run"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "^6.4.2",
+    "jsdom": "^24.0.0",
+    "@vitejs/plugin-react": "^4.3.0"
+  },
+  "vitest": {
+    "environment": "jsdom",
+    "setupFiles": "src/test/setup.js"
   }
 }
